--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           mkdir -p docs
           cp cv.pdf docs/
 
-      - name: Commit and push PDF
+      - name: Commit and push PDF to docs/
         env:
           TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
